Font-awesome integration + custom colors

--- a/sass/base/_theme.scss
+++ b/sass/base/_theme.scss
@@ -2,7 +2,7 @@ $post-date-color: gray;
 $post-title-color: black;
 
 $footer-border: solid 1px lightgray;
-$footer-bg: transparent;
+$footer-bg: lightgray;
 $footer-color: #777;
 
 .post-date {
