--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1,8 +1,12 @@
 @import "compass";
 @include global-reset;
 
+@import "bootstrap-compass";
 @import "bootstrap-variables";
 @import "bootstrap";
+@import "font-awesome-compass";
+@import "font-awesome";
+@import "custom/bootstrap-variables";
 @import "custom/colors";
 @import "custom/fonts";
 @import "custom/layout";
