--- a/sass/custom/_bootstrap-variables.scss
+++ b/sass/custom/_bootstrap-variables.scss
@@ -20,7 +20,7 @@
 // $gray-light:             lighten($gray-base, 46.7%) // #777
 // $gray-lighter:           lighten($gray-base, 93.5%) // #eee
 
-$brand-primary:            #2c3e50;
+// $brand-primary:         darken(#428bca, 6.5%)
 // $brand-success:         #5cb85c
 // $brand-info:            #5bc0de
 // $brand-warning:         #f0ad4e
@@ -46,7 +46,7 @@ $brand-primary:            #2c3e50;
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif: "Open Sans", "Helvetica Neue", Arial, sans-serif;
+// $font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif
 // $font-family-serif:       Georgia, "Times New Roman", Times, serif
 //* Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 // $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace
@@ -147,12 +147,12 @@ $font-family-sans-serif: "Open Sans", "Helvetica Neue", Arial, sans-serif;
 
 // $btn-font-weight:                normal
 
-$btn-default-color:                 white;
-$btn-default-bg:                    #bdc3c7;
-$btn-default-border:                #bdc3c7;
+// $btn-default-color:              #333
+// $btn-default-bg:                 #fff
+// $btn-default-border:             #ccc
 
-$btn-primary-color:                 #fff;
-$btn-primary-bg:                    $brand-primary;
+// $btn-primary-color:              #fff
+// $btn-primary-bg:                 $brand-primary
 // $btn-primary-border:             darken($btn-primary-bg, 5%)
 
 // $btn-success-color:              #fff
@@ -343,20 +343,20 @@ $btn-primary-bg:                    $brand-primary;
 //##
 
 // Basics of a navbar
-$navbar-height:                       80px;
+// $navbar-height:                    50px
 // $navbar-margin-bottom:             $line-height-computed
 // $navbar-border-radius:             $border-radius-base
 // $navbar-padding-horizontal:        floor(($grid-gutter-width / 2))
 // $navbar-padding-vertical:          (($navbar-height - $line-height-computed) / 2)
 // $navbar-collapse-max-height:       340px
 
-$navbar-default-color:                $btn-primary-color;
-$navbar-default-bg:                   $brand-primary;
+// $navbar-default-color:             #777
+// $navbar-default-bg:                #f8f8f8
 // $navbar-default-border:            darken($navbar-default-bg, 6.5%)
 
 // Navbar links
-$navbar-default-link-color:                   $btn-primary-color;
-$navbar-default-link-hover-color:             #1abc9c;
+// $navbar-default-link-color:                #777
+// $navbar-default-link-hover-color:          #333
 // $navbar-default-link-hover-bg:             transparent
 // $navbar-default-link-active-color:         #555
 // $navbar-default-link-active-bg:            darken($navbar-default-bg, 6.5%)
@@ -364,14 +364,14 @@ $navbar-default-link-hover-color:             #1abc9c;
 // $navbar-default-link-disabled-bg:          transparent
 
 // Navbar brand label
-$navbar-default-brand-color:                  $navbar-default-link-color;
-$navbar-default-brand-hover-color:            #1abc9c;
+// $navbar-default-brand-color:               $navbar-default-link-color
+// $navbar-default-brand-hover-color:         darken($navbar-default-brand-color, 10%)
 // $navbar-default-brand-hover-bg:            transparent
 
 // Navbar toggle
-$navbar-default-toggle-hover-bg:              #1abc9c;
-$navbar-default-toggle-icon-bar-bg:           $btn-primary-color;
-$navbar-default-toggle-border-color:          transparent;
+// $navbar-default-toggle-hover-bg:           #ddd
+// $navbar-default-toggle-icon-bar-bg:        #888
+// $navbar-default-toggle-border-color:       #ddd
 
 // Inverted navbar
 // Reset inverted navbar basics
@@ -801,7 +801,7 @@ $navbar-default-toggle-border-color:          transparent;
 
 // $pre-bg:                      #f5f5f5
 // $pre-color:                   $gray-dark
-$pre-border-color:               transparent;
+// $pre-border-color:            #ccc
 // $pre-scrollable-max-height:   340px
 
 //== Type
@@ -821,7 +821,7 @@ $pre-border-color:               transparent;
 //* Blockquote font size
 // $blockquote-font-size:        ($font-size-base * 1.25)
 //* Blockquote border color
-$blockquote-border-color:        #1abc9c;
+// $blockquote-border-color:     $gray-lighter
 //* Page header border color
 // $page-header-border-color:    $gray-lighter
 //* Width of horizontal description list titles
