--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -24,7 +24,9 @@
   <script src="{{ root_url }}/javascripts/modernizr-2.0.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script>!window.jQuery && document.write(unescape('%3Cscript src="./javascripts/libs/jquery.min.js"%3E%3C/script%3E'))</script>
+  <script src="{{ root_url }}/javascripts/libs/bootstrap.js" type="text/javascript"></script>
   <script src="{{ root_url }}/javascripts/octopress.js" type="text/javascript"></script>
+  <link href="//fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic" rel="stylesheet" type="text/css">
   {% include custom/head.html %}
   {% include google_analytics.html %}
 </head>
