--- a/source/_layouts/page.html
+++ b/source/_layouts/page.html
@@ -5,7 +5,7 @@ layout: default
 <div>
 <article role="article">
   {% if page.title %}
-  <header>
+  <header class="page-header">
     <h1 class="entry-title">{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}</h1>
     {% if page.date %}<p class="meta">{% include post/date.html %}{{ time }}</p>{% endif %}
   </header>
