--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -12,10 +12,10 @@ single: true
 		{% endunless %}
 		<p class="meta">
 			{% if page.previous.url %}
-				<a class="basic-alignment left" href="{{page.previous.url}}" title="Previous Post: {{page.previous.title}}">&laquo; {{page.previous.title}}</a>
+				<a class="basic-alignment pull-left" href="{{page.previous.url}}" title="Previous Post: {{page.previous.title}}"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> {{page.previous.title}}</a>
 			{% endif %}
 			{% if page.next.url %}
-				<a class="basic-alignment right" href="{{page.next.url}}" title="Next Post: {{page.next.title}}">{{page.next.title}} &raquo;</a>
+				<a class="basic-alignment pull-right" href="{{page.next.url}}" title="Next Post: {{page.next.title}}">{{page.next.title}} <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>
 			{% endif %}
 		</p>
 	</footer>
