--- a/sass/_bootstrap-variables.scss
+++ b/sass/_bootstrap-variables.scss
@@ -36,9 +36,9 @@ $brand-primary:            #2c3e50;
 // $text-color:            $gray-dark
 
 //* Global textual link color.
-// $link-color:            $brand-primary
+$link-color:               $brand-primary;
 //* Link hover color set via `darken()` function.
-// $link-hover-color:      darken($link-color, 15%)
+$link-hover-color:         #1abc9c;
 //* Link hover decoration.
 // $link-hover-decoration: underline
 
