--- a/source/_includes/asides/googleplus.html
+++ b/source/_includes/asides/googleplus.html
@@ -1,11 +1,4 @@
 {% if site.googleplus_user %}
-<section class="googleplus{% if site.googleplus_hidden %} googleplus-hidden{% endif %}">
-  <h1>
-    <a href="https://plus.google.com/{{ site.googleplus_user }}?rel=author">
-      <img src="http://www.google.com/images/icons/ui/gprofile_button-32.png" width="32" height="32">
-      Google+
-    </a>
-  </h1>
-</section>
+<a href="https://plus.google.com/{{ site.googleplus_user }}?rel=author" class="btn btn-default btn-google-plus"><i class="fa fa-google-plus"></i>
+</a>
 {% endif %}
-
